Few more places where we need to make sure we truncate long display names.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@16135 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_window-treatments.scss
+++ b/src/main/resources/scss/_window-treatments.scss
@@ -327,6 +327,13 @@
 						text-decoration: underline;
 					}
 				}
+
+				.displayname {
+					max-width: 326px;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					display: inline-block;
+				}
 			}
 		}
 
